<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:weightSum="10">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3.4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/head_parent"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:focusable="true">


            <TextView
                android:id="@+id/movie_videos_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toStartOf="@+id/top_rated_view_all"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/top_rated"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <Button
                android:id="@+id/top_rated_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bottom_sheet_click"
                android:clickable="false"
                android:focusable="false"
                android:maxLength="15"
                android:text="@string/view_all"
                android:textColor="@color/colorVoteAverageMovie"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHomeMovieTopRated"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/head_parent"
            android:layout_marginStart="8dp"
            android:clipToPadding="false" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <RelativeLayout
            android:id="@+id/head_parent3"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:focusable="true">

            <ProgressBar
                android:id="@+id/paginationProgressBar"
                style="?attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="0dp"
                android:background="@android:color/transparent"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/group_title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/categories"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHomeCategories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/head_parent3"
            android:layout_marginStart="8dp"
            android:clipToPadding="false" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_most_popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <RelativeLayout
            android:id="@+id/head_parent2"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/most_popular_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toStartOf="@+id/most_popular_view_all"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/most_popular"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <Button
                android:id="@+id/most_popular_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bottom_sheet_click"
                android:clickable="false"
                android:focusable="false"
                android:maxLength="15"
                android:text="@string/view_all"
                android:textColor="@color/colorVoteAverageMovie"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHomeMoviePopular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/head_parent2"
            android:layout_marginStart="8dp"
            android:clipToPadding="false" />


    </RelativeLayout>


</LinearLayout>