<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp">

        <View
            android:id="@+id/colorfull_line"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:background="@drawable/rounded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="25dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colorfull_line">

            <RelativeLayout
                android:id="@+id/button_click_later"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bottom_sheet_click"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/img_later"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/bookmark_true" />

                <TextView
                    android:id="@+id/tv_later"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@+id/img_later"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/watch_later"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="25dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colorfull_line">

            <RelativeLayout
                android:id="@+id/button_click_remove"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bottom_sheet_click"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/img_remove"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_delete_swipe" />

                <TextView
                    android:id="@+id/tv_remove"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@+id/img_remove"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/remove_from_archive"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="25dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colorfull_line">

            <RelativeLayout
                android:id="@+id/button_click_share"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bottom_sheet_click"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/img_share"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_share_icon" />

                <TextView
                    android:id="@+id/tv_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@+id/img_share"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/share"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="25dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colorfull_line">

            <RelativeLayout
                android:id="@+id/button_click_similar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bottom_sheet_click"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/img_similar"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/movie_icon" />

                <TextView
                    android:id="@+id/tv_similar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@+id/img_similar"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/more_like_this"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="25dp"
            android:visibility="gone"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colorfull_line">

            <RelativeLayout
                android:id="@+id/button_click_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bottom_sheet_click"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/img_description"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_more" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@+id/img_description"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="Ultra Ayrıntı Modu"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>


</androidx.cardview.widget.CardView>